@@ -1,3 +1,10 @@
+2011-04-14  Sebastien Binet  <sebastien.binet@cern.ch>
+
+	* tagging PyUtils-00-10-64
+	* obo L.Duflot: attempt at better TFile recycling
+	* warn a pattern could not be matched against any branch
+	* M bin/filter-and-merge-d3pd.py
+
 2011-03-31  Sebastien Binet  <sebastien.binet@cern.ch>
 
 	* tagging PyUtils-00-10-63
